# InternScout

./: .editorconfig  .env.example  .gitignore  AGENTS.md  BUILD_PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260721_0001_database_baseline.py
apps/api/src/internscout_api/: __init__.py  config.py  database.py  errors.py  main.py
apps/api/tests/: conftest.py  test_config.py  test_database.py  test_errors.py  test_migrations.py  test_system.py
apps/web/: .env.example  .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  package.json  tsconfig.json
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/applications/: page.tsx
apps/web/src/app/development/: page.tsx
apps/web/src/app/jobs/: page.tsx
apps/web/src/app/resume/: page.tsx
apps/web/src/components/: app-shell.tsx  backend-status.test.tsx  backend-status.tsx  empty-state.test.tsx  empty-state.tsx  navigation.test.tsx  navigation.tsx  page-header.tsx  section-card.tsx
apps/web/src/lib/: api.test.ts  api.ts
docker/postgres/: init-test-database.sh
docs/decisions/: 0001-monorepo-foundation.md  0002-frontend-foundation.md  0003-api-foundation.md  0004-frontend-api-connection.md  0005-postgresql-persistence.md
scripts/: verify-foundation.mjs
tests/: foundation.test.mjs
workers/ingestion/: README.md
workers/matching/: README.md
workers/notifications/: README.md
(+1 files in other folders)
