[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "internscout-api"
version = "0.1.0"
description = "FastAPI backend for the InternScout internship application copilot."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "black>=25.1,<27",
  "httpx2>=2.7,<3",
  "pyright>=1.1.405,<2",
  "pytest>=8.4,<10",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.uv]
required-version = ">=0.11,<0.12"

[tool.hatch.build.targets.wheel]
packages = ["src/internscout_api"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-ra"]
testpaths = ["tests"]
markers = [
  "integration: requires the dedicated PostgreSQL test database",
]

[tool.coverage.run]
branch = true
source = ["internscout_api"]

[tool.coverage.report]
fail_under = 90
show_missing = true
